# chat_server

./: CMakeLists.txt  introduce.txt
client/include/: ChatClient.h  MainWindow.h
client/src/: ChatClient.cpp  MainWindow.cpp  main.cpp
server/config/: nginx.conf  schema.sql
server/include/: ChatServer.h  Common.h  Database.h  RedisClient.h
server/src/: ChatServer.cpp  Database.cpp  RedisClient.cpp  main.cpp
