cmake_minimum_required(VERSION 3.16)
project(cluster_chat)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

option(BUILD_SERVER "Build server" OFF)
option(BUILD_CLIENT "Build client" ON)

if(BUILD_CLIENT)
    set(CMAKE_PREFIX_PATH "C:/Qt/6.11.1/mingw_64" ${CMAKE_PREFIX_PATH})
    find_package(Qt6 COMPONENTS Core Network Widgets REQUIRED)
    set(CMAKE_AUTOMOC ON)
    set(CMAKE_AUTOUIC ON)
    set(CMAKE_AUTORCC ON)
    include_directories(${PROJECT_SOURCE_DIR}/client/include)
    file(GLOB_RECURSE CLIENT_HEADERS "client/include/*.h")
    file(GLOB_RECURSE CLIENT_SOURCES "client/src/*.cpp")
    add_executable(chat_client ${CLIENT_SOURCES} ${CLIENT_HEADERS})
    target_link_libraries(chat_client Qt6::Core Qt6::Network Qt6::Widgets)
    message(STATUS "Build client: ON")
endif()

if(BUILD_SERVER)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -O0")
    set(CMAKE_PREFIX_PATH "/home/fanfan/muduo/build" ${CMAKE_PREFIX_PATH})
    find_package(Boost REQUIRED)
    find_package(MySQL REQUIRED)
    find_package(hiredis REQUIRED)
    find_package(muduo REQUIRED)
    include_directories(${PROJECT_SOURCE_DIR}/server/include)
    include_directories(${Boost_INCLUDE_DIRS})
    include_directories(${MYSQL_INCLUDE_DIR})
    include_directories(${HIREDIS_INCLUDE_DIR})
    include_directories(${MUDUO_INCLUDE_DIR})
    file(GLOB_RECURSE SERVER_HEADERS "server/include/*.h")
    file(GLOB_RECURSE SERVER_SOURCES "server/src/*.cpp")
    add_executable(chat_server ${SERVER_SOURCES} ${SERVER_HEADERS})
    target_link_libraries(chat_server ${MUDUO_NET_LIBRARY} ${MUDUO_BASE_LIBRARY}
                          ${MYSQL_LIBRARY} ${HIREDIS_LIBRARY} -lpthread)
    message(STATUS "Build server: ON")
endif()